--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
     <meta property="og:title" content="AS400671">
     <meta property="og:description" content="stypr network &middot; network.stypr.com">
     <title>AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="//stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="//stypr.com/favicon.ico">
-    <link rel="preload" href="//cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
-    <link rel="preload" href="//cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="//fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
+    <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
-    <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css" rel="stylesheet">
+    <link href="./static/stylesheet/bootstrap.css" rel="stylesheet">
+    <link href="./static/stylesheet/bootstrap.stypr.css" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="dead" viewBox="0 0 16 16">
+            <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
+            <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
+        </symbol>
         <symbol id="house-fill" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
             <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
@@ -157,7 +161,7 @@
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <div class="mb-10">
                         <h1 class="h2">Infrastructures</h1>
-                        <h6>Overview of AS400671 and its PoPs</h6>
+                        <h6>Overview of network infrastructures</h6>
                     </div>
                 </div>
                 <div class="row">
@@ -292,7 +296,8 @@
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
-    <script src="/static/javascript/dashboard.js"></script>
+    <script src="./static/javascript/header.js"></script>
+    <script src="./static/javascript/dashboard.js"></script>
 </body>
 
 </html>
@@ -308,5 +313,6 @@
                      _/      888             
 
           Copyright 2022 stypr. ¯\_(ツ)_/¯
+   https://github.com/AS400671/dashboard/LICENSE
 
 -->
