refactor: title, meta desc

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
     <meta name="referrer" content="no-referrer">
-    <meta name="description" content="stypr network &middot; network.stypr.com">
-    <meta name="twitter:title" content="AS400671">
-    <meta property="og:title" content="AS400671">
-    <meta property="og:description" content="stypr network &middot; network.stypr.com">
+    <meta name="description" content="AS400671(AS-STYPR) Dashboard">
+    <meta name="twitter:title" content="AS400671 Dashboard">
+    <meta property="og:title" content="AS400671 Dashbaord">
+    <meta property="og:description" content="AS400671(AS-STYPR) Dashboard">
     <title>AS400671 (AS-STYPR)</title>
     <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208040430" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
