--- a/services.html
+++ b/services.html
@@ -8,11 +8,11 @@
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
     <meta name="referrer" content="no-referrer">
-    <meta name="description" content="About AS400671(AS-STYPR)">
-    <meta name="twitter:title" content="About AS400671">
-    <meta property="og:title" content="About AS400671">
-    <meta property="og:description" content="About AS400671(AS-STYPR)">
-    <title>About | AS400671 (AS-STYPR)</title>
+    <meta name="description" content="AS400671(AS-STYPR) Services">
+    <meta name="twitter:title" content="AS400671 Services">
+    <meta property="og:title" content="AS400671 Services">
+    <meta property="og:description" content="AS400671(AS-STYPR) Services">
+    <title>Services | AS400671 (AS-STYPR)</title>
     <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
@@ -94,7 +94,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/services.html" class="nav-link" id="header-link-services">
+                            <a href="#" class="nav-link active" id="header-link-services">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#ethernet" />
                                 </svg>
@@ -102,7 +102,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active" id="header-link-about">
+                            <a href="/about.html" class="nav-link" id="header-link-about">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#about" />
                                 </svg>
@@ -114,75 +114,76 @@
             </div>
         </div>
     </header>
-    <main class="flex-shrink-0 pb-5 pt-4">
-        <div class="container">
+        <main class="flex-shrink-0 pb-5 pt-4">
+            <div class="container">
 
-            <div class="" id="page-about">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <div class="mb-10">
-                        <h1 class="h2">About Network</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Description</h4>
-                            <br>
-                            <h6>
-                                AS400671 (AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operations, security researches, and network managements.<br><br>
-                                The entire network infrastructures and dashboard system are operated, maintained and managed by <a href="https://stypr.com">stypr</a>. <br><br>
-                            </h6>
+                <div class="" id="page-about">
+                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                        <div class="mb-10">
+                            <h1 class="h2">Provided Services</h1>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Peering Policy</h4>
-                            <br>
-                            <h6>
-                                AS400671 (AS-STYPR) provides an <b>open peering policy</b> by default.<br>
-                                You are always welcome to peer over any exchange points we have in common.<br>
-                                For the list of interconnected exchange points, please refer to <a href="/#exchanges">Exchanges</a> for more details.
-                                <br><br>
-
-                                To peer with AS400671, you must meet the following requirements:
-                                <br><br>
-                                <ul>
-                                    <li>AS must be valid and public.</li>
-                                    <li>AS must be announcing its own prefixes only.</li>
-                                    <li>AS must announce at least one or more legitimate prefixes.</li>
-                                    <li>There needs to be at least one or more exchange points we have in common.</li>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card bg-body rounded-0 shadow-sm">
+                                <div class="card-header py-3">
+                                <h4 class="my-0 fw-normal">IP Lease</h4>
+                                </div>
+                                <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$5<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>Providing IPv6 /48 address spaces</li>
+                                    <li>For customers</li>
+                                    <li>Best-effort support</li>
                                 </ul>
-
-                                Any peering connections are subject to termination without notice.<br>
-                                Please contact <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">pgp</a>) for any inquiries regarding the peering policy.
+                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Request</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card bg-body rounded-0 shadow-sm">
+                                <div class="card-header py-3">
+                                <h4 class="my-0 fw-normal">Dedicated Server</h4>
+                                </div>
+                                <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$60<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>8GB RAM &middot; i8700T</li>
+                                    <li>1Gbps &middot; Fair Use Policy</li>
+                                    <li>Best-effort support</li>
+                                </ul>
+                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Contact Support</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card bg-body rounded-0 shadow-sm">
+                                <div class="card-header py-3 border-primary2 text-bg-primary2 rounded-0">
+                                    <h4 class="my-0 fw-normal">WireGuard VPN</h4>
+                                </div>
+                                <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>Providing IPv6 VPN network</li>
+                                    <li>1Gbps &middot; Fair Use Policy</li>
+                                    <li>Best-effort support</li>
+                                </ul>
+                                <button type="button" class="w-100 btn btn-lg btn-primary disabled">Request Access</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="my-3 p-3 bg-body shadow-sm">
+                                <h4>Description</h4>
                                 <br>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Links</h4>
-                            <br>
-                            <h6>
-                                <ul>
-                                    <li class="pb-3">
-                                        <b>PeeringDB</b><br>
-                                        <a href="https://www.peeringdb.com/net/29832">https://www.peeringdb.com/net/29832</a>
-                                    </li>
-                                    <li>
-                                        <b>KNOC</b><br>
-                                        Korea Network Operation Center<br>
-                                        <a href="https://knoc.cc/">https://knoc.cc/</a>
-                                    </li>
-                                </ul>
-                            </h6>
+                                <h6>
+                                    Service Under Construction... <br><br>
+                                </h6>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
