--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208040430" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208041520" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -77,7 +77,7 @@
 
                     <ul class="header-link-group nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="/" class="nav-link active" id="header-link-dashboard">
+                            <a href="#" class="nav-link active" id="header-link-dashboard">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#speedometer2" />
                                 </svg>
@@ -85,9 +85,8 @@
                             </a>
                             </a>
                         </li>
-                        <!--
                         <li>
-                            <a href="/looking-glass" class="nav-link" id="header-link-lg">
+                            <a href="/looking-glass.html" class="nav-link" id="header-link-lg">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#glass" />
                                 </svg>
@@ -95,14 +94,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/services" class="nav-link" id="header-link-services">
+                            <a href="/services.html" class="nav-link" id="header-link-services">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#ethernet" />
                                 </svg>
                                 Services
                             </a>
                         </li>
-                        -->
                         <li>
                             <a href="/about.html" class="nav-link" id="header-link-about">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
@@ -154,7 +152,7 @@
                 <div class="lh-1">
                     <h1 class="h6 mb-0 text-white lh-1">
                         <b>IPv6 is not available!</b>
-                    </h1><br>
+                    </h1>
                     <small>AS400671 only provides access for IPv6 addresses. You may not be able to access some of services we provide.</small>
                 </div>
             </div>
