--- a/looking-glass.html
+++ b/looking-glass.html
@@ -8,11 +8,11 @@
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
     <meta name="referrer" content="no-referrer">
-    <meta name="description" content="About AS400671(AS-STYPR)">
-    <meta name="twitter:title" content="About AS400671">
-    <meta property="og:title" content="About AS400671">
-    <meta property="og:description" content="About AS400671(AS-STYPR)">
-    <title>About | AS400671 (AS-STYPR)</title>
+    <meta name="description" content="AS400671(AS-STYPR) Looking Glass">
+    <meta name="twitter:title" content="AS400671 Looking Glass">
+    <meta property="og:title" content="AS400671 Looking Glass">
+    <meta property="og:description" content="AS400671(AS-STYPR) Looking Glass">
+    <title>Looking Glass | AS400671 (AS-STYPR)</title>
     <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
@@ -86,7 +86,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/looking-glass.html" class="nav-link" id="header-link-lg">
+                            <a href="#" class="nav-link active" id="header-link-lg">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#glass" />
                                 </svg>
@@ -102,7 +102,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active" id="header-link-about">
+                            <a href="/about.html" class="nav-link" id="header-link-about">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#about" />
                                 </svg>
@@ -115,74 +115,15 @@
         </div>
     </header>
     <main class="flex-shrink-0 pb-5 pt-4">
-        <div class="container">
+        <div class="align-items-center p-5 my-5" id="loading-screen">
+            <div class="row">
 
-            <div class="" id="page-about">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <div class="mb-10">
-                        <h1 class="h2">About Network</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Description</h4>
-                            <br>
-                            <h6>
-                                AS400671 (AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operations, security researches, and network managements.<br><br>
-                                The entire network infrastructures and dashboard system are operated, maintained and managed by <a href="https://stypr.com">stypr</a>. <br><br>
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Peering Policy</h4>
-                            <br>
-                            <h6>
-                                AS400671 (AS-STYPR) provides an <b>open peering policy</b> by default.<br>
-                                You are always welcome to peer over any exchange points we have in common.<br>
-                                For the list of interconnected exchange points, please refer to <a href="/#exchanges">Exchanges</a> for more details.
-                                <br><br>
-
-                                To peer with AS400671, you must meet the following requirements:
-                                <br><br>
-                                <ul>
-                                    <li>AS must be valid and public.</li>
-                                    <li>AS must be announcing its own prefixes only.</li>
-                                    <li>AS must announce at least one or more legitimate prefixes.</li>
-                                    <li>There needs to be at least one or more exchange points we have in common.</li>
-                                </ul>
-
-                                Any peering connections are subject to termination without notice.<br>
-                                Please contact <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">pgp</a>) for any inquiries regarding the peering policy.
-                                <br>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Links</h4>
-                            <br>
-                            <h6>
-                                <ul>
-                                    <li class="pb-3">
-                                        <b>PeeringDB</b><br>
-                                        <a href="https://www.peeringdb.com/net/29832">https://www.peeringdb.com/net/29832</a>
-                                    </li>
-                                    <li>
-                                        <b>KNOC</b><br>
-                                        Korea Network Operation Center<br>
-                                        <a href="https://knoc.cc/">https://knoc.cc/</a>
-                                    </li>
-                                </ul>
-                            </h6>
-                        </div>
-                    </div>
+                <div class="col-md-12 text-center">
+                    <img src="https://minio.dnaroma.eu/sekai-assets/stamp/stamp0395_rip/stamp0395/stamp0395.png"> 
+                    <br>
+                    <h1>404 Not Found</h1>
                 </div>
             </div>
-
         </div>
     </main>
 
