--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
                                         <li>Exclusively available for business customers</li>
                                         <li> &nbsp;</li>
                                     </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="location.href='mailto:server%2blease&#64;stypr.com';">
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="location.href='mailto:serverdlease&#64;stypr.com';">
                                         Contact Operator
                                     </button>
                                 </div>
