feat(lg): implement commands

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <div class="mb-12">
                         <h1 class="h2">Connectivity</h1>
-                        <h6>List of upstreams and peers interconnected with AS400671</h6>
+                        <h6>List of upstreams and peers interconnected over exchanges</h6>
                     </div>
                 </div>
                 <div class="my-3 p-0 bg-body shadow-sm">
