--- a/services.html
+++ b/services.html
@@ -132,7 +132,7 @@
                                     <div class="card-body">
                                     <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
                                     <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Providing IPv6 /48 address spaces</li>
+                                        <li>Providing 1Gbps IPv6 /48 address spaces</li>
                                         <li>Exclusively available for business customers</li>
                                         <li> &nbsp;</li>
                                     </ul>
