--- a/looking-glass.html
+++ b/looking-glass.html
@@ -66,7 +66,10 @@
         <symbol id="traceroute" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M1 2.5A1.5 1.5 0 0 1 2.5 1h1A1.5 1.5 0 0 1 5 2.5h4.134a1 1 0 1 1 0 1h-2.01c.18.18.34.381.484.605.638.992.892 2.354.892 3.895 0 1.993.257 3.092.713 3.7.356.476.895.721 1.787.784A1.5 1.5 0 0 1 12.5 11h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5H6.866a1 1 0 1 1 0-1h1.711a2.839 2.839 0 0 1-.165-.2C7.743 11.407 7.5 10.007 7.5 8c0-1.46-.246-2.597-.733-3.355-.39-.605-.952-1-1.767-1.112A1.5 1.5 0 0 1 3.5 5h-1A1.5 1.5 0 0 1 1 3.5v-1zM2.5 2a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10 10a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"/>
         </symbol>
-
+        <symbol id="down" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+            <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        </symbol>
         <symbol id="protocol" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 0 .5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2A.5.5 0 0 1 .5 2h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2A.5.5 0 0 1 .5 4h10a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2A.5.5 0 0 1 .5 6h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2A.5.5 0 0 1 .5 8h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-13 2a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5Zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Z"/>
         </symbol>
@@ -194,28 +197,28 @@
                                         </svg>
                                     </div>
                                     <div class="p-2">
-                                        <span class="text-monospace-lg">ping [ip]</span>
+                                        <span class="text-monospace-lg">ping [ip|domain]</span>
                                         <br>
                                         <span style="font-size: 9pt;">
-                                            measures the round-trip time for messages sent from source to destination.
+                                            measure the round-trip time for messages sent from source to destination.
                                         </span>
                                     </div>
                                 </div>
-                                <div class="text-muted lh-1 pt-2 d-flex align-items-center w-100">
+                                <div class="lh-1 pt-2 d-flex align-items-center w-100">
                                     <div class="p-2">
                                         <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                             <use xlink:href="#traceroute" />
                                         </svg>
                                     </div>
                                     <div class="p-2">
-                                        <span class="text-monospace-lg">traceroute [ip]</span>
+                                        <span class="text-monospace-lg">traceroute [ip|domain]</span>
                                         <br>
                                         <span style="font-size: 9pt;">
-                                            traces and diagnoses the pathway from source to destination.
+                                            trace and diagnose the pathway from source to destination. used for debugging routes.
                                         </span>
                                     </div>
                                 </div>
-                                <div class="text-muted lh-1 pt-2 d-flex align-items-center w-100">
+                                <div class="lh-1 pt-2 d-flex align-items-center w-100">
                                     <div class="p-2">
                                         <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                             <use xlink:href="#protocol" />
@@ -225,11 +228,11 @@
                                         <span class="text-monospace-lg">bgp proto</span>
                                         <br>
                                         <span style="font-size: 9pt;">
-                                            lists status of protocols used by point of presenses.
+                                            show status of BGP protocols used by point of presenses.
                                         </span>
                                     </div>
                                 </div>
-                                <div class="text-muted lh-1 pt-2 d-flex align-items-center w-100">
+                                <div class="lh-1 pt-2 d-flex align-items-center w-100">
                                     <div class="p-2">
                                         <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                             <use xlink:href="#route" />
@@ -239,7 +242,7 @@
                                         <span class="text-monospace-lg">bgp route [ip]</span>
                                         <br>
                                         <span style="font-size: 9pt;">
-                                            shows routing information on a given ip address.
+                                            show BGP routing information on a given ip address.
                                         </span>
                                     </div>
                                 </div>
@@ -266,16 +269,61 @@
             <div class="d-none align-items-center my-5" id="page-ping">
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
+                        <table class="table table-hover table-responsive mb-0">
+                            <thead class="table-dark">
+                                <th>PoP</th>
+                                <th class="text-center">avg</th>
+                                <th class="text-center">min</th>
+                                <th class="text-center">max</th>
+                                <th class="text-center">mdev</th>
+                                <th class="text-center">loss</th>
+                            </thead>
+                            <tbody id="ping-body">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-none align-items-center my-5" id="page-traceroute">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
                         <table class="table table-responsive mb-0">
                             <thead class="table-dark">
                                 <th>PoP</th>
-                                <th>avg</th>
-                                <th>min</th>
-                                <th>max</th>
-                                <th>mdev</th>
-                                <th>loss</th>
+                                <th class="text-center">&nbsp;</th>
                             </thead>
-                            <tbody id="ping-body">
+                            <tbody id="traceroute-body">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-none align-items-center my-5" id="page-bgproute">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
+                        <table class="table table-responsive mb-0">
+                            <thead class="table-dark">
+                                <th>PoP</th>
+                                <th class="text-center">&nbsp;</th>
+                            </thead>
+                            <tbody id="bgproute-body">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-none align-items-center my-5" id="page-proto">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
+                        <table class="table table-responsive mb-0">
+                            <thead class="table-dark">
+                                <th>PoP</th>
+                                <th class="text-center">&nbsp;</th>
+                            </thead>
+                            <tbody id="proto-body">
                             </tbody>
                         </table>
                     </div>
